--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <title>Browser</title>
 </head>
 
@@ -12,10 +12,10 @@
   <header>
   <nav>
     <img src="https://images.adsttc.com/media/images/5037/e052/28ba/0d59/9b00/015a/large_jpg/stringio.jpg?1414052877" width="10px" height="10px">
-    <a href="/index.html">Home</a>
-    <a href="/projects.html">Projects</a>
-    <a href="/articles.html">Articles</a>
-    <a href="/contact.html">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="articles.html">Articles</a>
+    <a href="contact.html">Contact</a>
   </nav>    
   </header>
   
