--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
   <body>
   <header>
   <nav>
-    <a href="/index.html">Home</a>
-    <a href="/projects.html">Projects</a>
-    <a href="/articles.html">Articles</a>
-    <a href="/contact.html">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="articles.html">Articles</a>
+    <a href="contact.html">Contact</a>
   </nav>    
   </header>
     
